package it.polimi.ingsw.model.card;

/**
 * This enumeration represents the possible colors of the cards
 */
public enum CardColor {
    GREEN,
    PURPLE,
    RED,
    SKYBLUE,
    WHITE

}
