package it.polimi.ingsw.model.card;

import java.io.Serializable;

/**
 * This enum serves to distinguish the different sides of a card.
 */
public enum CardOrientation implements Serializable {
    FRONT ,
    BACK;
}
